# rjs_litterature_mining

./: .gitignore  README.md  RJS_webofknowledge_search_20210429.csv  requirements.txt
DataMining/: ArticlesSortedByScore_20210522_checklist.csv  ArticlesSortedByScore_20210522_url_TEST.csv  DataMiningTemplate.yaml  SmartStoplist.txt  datamining.py  fiber_diameter_range.py  materials_list.csv  nozzle_diameter_range.py  speed_range.py  temperature_range.py  used_materials.py
DataMining/ArticlesHtml/: 004.html  005.html  012.html  013.html  024.html  12.html  13.html  24.html  4.html  5.html
DataMining/DataFileByArticles/: 10.yaml  11.yaml  12.yaml  13_notRJS.yaml  14.yaml  15.yaml  16.yaml  (+60 more)
FunctionTest/: CleanWordsOccurence_modified.csv  artcicle_sorted_by_score_TEST.py  article_with_word_TEST.py  class_Process_test.py  class_RawDf_TEST.py  class_Rawtxt_TEST.py  class_WOSdf_TEST.py  map_of_publisher_cities_TEST.py  materials_table_TEST.py  nb_art_vs_2sub_TEST.py  plot_word_by_year_TEST.py
WordAnalysis/: CitationsData_20210507.csv  CitationsData_20210507.xls  CleanWordsOccurence.csv  DataBase_20210503.csv  DataBase_20210503.xls  DataBase_20210522.csv  DataBase_20210522.xls  Exportation_Prepa_Citations_Extension_Pack.txt  Exportation_Prepa_Of_RawDataBase.txt  WordsAnalysis.py  main_words_analysis.py
WordAnalysis/wordanalysis_package/: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
WordAnalysis/wordanalysis_package/src/raw_df/: raw_df.py
WordAnalysis/wordanalysis_package/src/raw_txt/: raw_txt.py
WordAnalysis/wordanalysis_package/src/wos_df/: __inti__.py
(+105 files in other folders)
