# Based on
# Packaging Python Projects—Python Packaging User Guide. (n.d.). 
# Retrieved June 14, 2021, from 
# https://packaging.python.org/tutorials/packaging-projects/
[metadata]
name = wordanalysis
version = 0.1
author = Valérie Toupin-Guay
author_email = valerie.toupin-guay.1@ens.etsmtl.ca
description = explore data exported from Web Of Knowledge
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jaklengaigne/rjs_litterature_mining/tree/main/WordAnalysis/wordanalysis
project_urls =
    Bug Tracker = https://github.com/jaklengaigne/rjs_litterature_mining/issues
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Text Processing
    Topic :: Scientific/Engineering :: Information Analysis
    Natural Language :: English
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src